gcc/testsuite/gm2/errors/fail/testsize.mod
MODULE testsize ;

FROM SYSTEM IMPORT SIZE ;

VAR
   c: CARDINAL ;
BEGIN
   c := SIZE (1)
END testsize.